--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -25,8 +25,8 @@ header button {width:25%;margin-left:25%;font-size:1.4vw;border:solid 1px black;
 /*Sections*/
 section {float:left;width:100%;padding:5%;}
 
-#bio p.intro {font-size:32px;line-height:44px;float:left;width:38%;}
-#bio div {-webkit-column-count:2;-moz-column-count:2;column-count:2;}
+#bio p.intro {font-size:32px;line-height:44px;width:60%;font-style:italic;text-align:center;margin:0 auto;}
+#bio div {-webkit-column-count:2;-moz-column-count:2;column-count:2;width:60%;margin:0 auto;}
 #bio h2 {color:black;}
 
 #recent-work {background-color:#141414;color:white;position:relative;float:left;width:100%;height:480px;}
@@ -107,6 +107,8 @@ footer nav a {display:inline;text-decoration:none;}
 
 /* iPads (portrait and landscape) ----------- */
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+	#bio p.intro {font-size:32px;line-height:44px;width:80%;font-style:italic;text-align:center;margin:0 auto;}
+	#bio div {-webkit-column-count:1;-moz-column-count:1;column-count:1;width:80%;margin:0 auto;}
 	.work li {display:block;float:none;width:100%;}
 }
 
