--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,3 +1,12 @@
+/*Animations*/
+i {
+    -webkit-animation-duration: 5s;
+            animation-duration: 5s;
+	-webkit-animation-delay: 2s;
+			animation-delay: 2s;
+	-webkit-animation-iteration-count: infinite;
+}
+
 * {margin:0;padding:0;box-sizing:border-box;}
 img {border:none;}
 
@@ -5,60 +14,67 @@ body {font-size:100%;border-top:solid 3px black;font-family:Arial, sans-serif;}
 
 h1, h2, h3, h4, h5, h6 {font-weight:400;color:black;margin-bottom:0.5em;font-family:"Fjalla One", sans-serif;}
 h1 {font-size:5vw;}
-h2 {font-size:48px;text-align:left;border-top:3px solid black;padding-top:1em;margin-bottom:1em;text-transform:uppercase;}
+h2 {font-size:48px;text-align:left;border-top:3px solid black;padding-top:0.5em;margin-bottom:0.5em;text-transform:uppercase;}
 h3 {font-size:2vw;color:white;}
 p {font-size:18px;margin-bottom:32px;line-height:32px;font-family:Georgia, "Times New Roman", Times, serif;}
-button {cursor:pointer;text-transform:uppercase;background-color:white;color:white;font-family:"Fjalla One", sans-serif;font-weight:normal;background-color: #569e3d;
-background-image: -webkit-linear-gradient(#79d858, #569e3d);
-background-image: linear-gradient(#79d858, #569e3d);
+button {cursor:pointer;text-transform:uppercase;background-color:white;color:black;font-family:"Fjalla One", sans-serif;font-weight:normal;
+background-color: #FEE02E;
+background-image: -webkit-linear-gradient(#FEE02E, #ffda00);
+background-image: linear-gradient(#FEE02E, #ffda00);
 background-repeat: repeat-x;
-border:none;}
+border:solid 3px #FEE02E;}
 a {color:black;text-decoration:none;}
-a:hover {color:yellow;}
+a:hover {color:#FEE02E;}
 
-p a:hover {background-color:yellow;color:black;}
+a, a:hover, button, button:hover {-webkit-transition: all 1s ease-in-out;-moz-transition: all 0.5s ease-in-out;-o-transition: all 0.5s ease-in-out;transition: all 0.5s ease-in-out;}
+
+p a:hover {background-color:#FEE02E;color:black;}
 
 /*Top*/
 /*color:#CAC697;*/
-header {background-color:white;color:black;overflow:hidden;position:relative;}
+header {background:url(../images/header-bg.png) no-repeat;overflow:hidden;position:relative;}
 header img {width:100%;height:auto;float:left;}
 header div {width:45%;height:auto;float:right;}
-header div.intro {float:left;width:55%;background-color:white;padding:5%;}
-header div.intro h1 {text-transform:uppercase;text-align:left;width:100%;padding:0.1em 0;border:solid 3px black;border-left:none;border-right:none;}
+header div.intro {float:left;width:55%;padding:5%;}
+header div.intro h1 {color:white;text-transform:uppercase;text-align:left;width:100%;padding:0.1em 0;border:solid 6px white;border-left:none;border-right:none;}
 header div.intro h1 s {display:none;}
-header div.intro p {width:100%;font-style:italic;font-size:2.6vw;line-height:3.6vw;color:#333;}
-header div.intro p a {font-family:"Fjalla One", sans-serif;text-transform:uppercase;}
+header div.intro p {width:100%;font-style:italic;font-size:2.6vw;line-height:3.6vw;color:white;}
+header div.intro p a {font-family:"Fjalla One", sans-serif;text-transform:uppercase;color:#EFEFEF;}
+header div.intro p a:hover {color:black;}
 header div.intro button {width:auto;font-size:2.4vw;padding:2% 10%;margin-top:0.5em;}
-header div.intro button:hover {background-color:yellow;color:black;}
+header div.intro button:hover {border-color:black;}
+header div.intro i {float:right;}
 
 /*Sections*/
-section {float:left;width:100%;padding:8% 5%;}
+section {float:left;width:100%;padding:5%;}
 
-#bio {background-color:#F2F2F2;}
+#bio {background-color:#F2F2F2;padding:8% 5%;}
 #bio p.intro {font-size:28px;line-height:44px;width:60%;font-style:italic;text-align:center;margin:0 auto;border-top:3px solid black;padding-top:2em;margin-bottom:2em;}
+/*#bio p.intro:before {display:block;content:'';background:black;height:3px;margin-top:-64px;margin-bottom:2em;}*/
 #bio p.intro strong {font-family:"Fjalla One", sans-serif;font-weight:400;font-style:normal;text-transform:uppercase;}
 #bio div {-webkit-column-count:2;-moz-column-count:2;column-count:2;width:60%;margin:0 auto;}
 #bio h2 {color:black;}
 #bio p a {font-family:"Fjalla One", sans-serif;font-size:16px;text-transform:uppercase;}
 
-#recent-work {background-color:white;color:black;position:relative;float:left;width:100%;height:auto;}
+#recent-work {background:url(../images/desk-angle.jpg) center top;background-size:cover;color:white;position:relative;float:left;width:100%;height:auto;}
+#recent-work h2 {border-color:white;}
+#recent-work h2, #recent-work h3, #recent-work a {color:white;}
 #recent-work #video {position:absolute;top:0;left:0;width:100%;height:100%;}
 #recent-work img {float:left;}
 
 #work {background-color:#F2F2F2;}
-#work h2 {text-align:center;}
-#work li {display:inline;float:left;width:33.33%;}
-#work li img {width:100%;height:auto;}
+#work li {display:inline;float:left;width:30%;background-color:white;}
+#work li:nth-child(2) {margin:0 5%;}
+#work figcaption {padding:1em;}
+#work li img {width:100%;height:auto;-webkit-filter: grayscale(1); -webkit-filter: grayscale(100%);filter: gray; filter: grayscale(100%);filter: url(desaturate.svg#greyscale);}
 
-#work details {float:left;width:100%;}
-#work summary {text-align:center;}
-#work summary::-webkit-details-marker {display:none;}
-#work summary:after {background:red;border-radius: 5px;content: "+";color: #fff;float: left;font-size: 1.5em;font-weight: bold;margin: -5px 10px 0 0;padding: 0;text-align: center;width: 20px;}
-#work details[open] summary:after {content: "-";}
-#work details li small {display:block;}
+#stats {background-color:#FEE02E;}
+#stats li {width:33%;display:inline;float:left;}
+#stats li big {display:block;font-size:4em;}
 
 #personal {background-color:white;}
 #personal h2 {color:black;}
+#personal img {-webkit-filter: grayscale(1); -webkit-filter: grayscale(100%);filter: gray; filter: grayscale(100%);filter: url(desaturate.svg#greyscale);width:10%;height:auto;}
 
 /*Bottom*/
 footer {text-align:center;background-color:black;color:white;float:left;width:100%;padding:2vw;}
@@ -68,17 +84,24 @@ footer nav a {display:inline;text-decoration:none;}
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-width : 320px) and (max-width : 480px) {
-/* Styles */
+	h2 {font-size:24px;text-align:center;}
+
+	header div {width:100%;height:auto;float:right;text-align:center;}
+	header div.intro {float:left;width:100%;background-color:white;padding:5%;}
+	header div.intro button {width:100%;}
+
+	#bio p.intro {font-size:20px;line-height:32px;width:100%;}
+	#bio div {-webkit-column-count:1;-moz-column-count:1;column-count:1;width:100%;margin:0 auto;}
 }
 
 /* Smartphones (landscape) ----------- */
-@media only screen and (min-width : 321px) {
-/* Styles */
+@media only screen and (min-width: 321px) {
+	
 }
 
 /* Smartphones (portrait) ----------- */
 @media only screen and (max-width : 320px) {
-/* Styles */
+
 }
 
 /* iPads (portrait and landscape) ----------- */
